# eddington-gui

./: .bumpversion.cfg  .gitattributes  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  README.rst  VERSION  pyproject.toml  requirements.txt  setup.py  statue.toml  test_style.bat  tox.ini
.circleci/: config.yml
.github/: labels.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback_template.md
.github/workflows/: ci.yml  release.yml  submit_issue.yml
docs/: Makefile  acknowledgement.rst  conf.py  docs_requirements.txt  index.rst  make.bat
docs/community/: acknowledgment.rst  contribution_guide.rst  index.rst
docs/tutorials/: background.rst  costume_fitting_functions.rst  custom_fitting_functions.rst  data_files.rst  faq.rst  fitting.rst  index.rst  installation.rst  select_records.rst  summary.rst  upload_data.rst
src/eddington_gui/: __init__.py  __main__.py  app.py  app_data.py  consts.py  data_box.py  logging.py  util.py  validators.py
src/eddington_gui.dist-info/: METADATA
src/eddington_gui/boxes/: __init__.py  data_box.py  data_columns_box.py  eddington_box.py  figure_box.py  fitting_function_box.py  footer_box.py  header_box.py  initial_guess_box.py  input_file_box.py  line_box.py  main_box.py  output_box.py  parameters_box.py  parameters_options_box.py  plot_button.py  plot_configuration_box.py  save_figure_button.py  welcome_box.py
src/eddington_gui/buttons/: __init__.py  plot_button.py  save_figure_button.py
src/eddington_gui/resources/: eddington_gui.icns
src/eddington_gui/window/: __init__.py  explore_window.py  figure_window.py  records_choice_window.py
