[build-system]
requires = [
    "briefcase",
    "setuptools >= 49.6.0",
    "setuptools_scm >= 4.1.2"
]
build-backend = "setuptools.build_meta"

[tool.briefcase]
project_name = "EddingtonGUI"
bundle = "com.eddington_gui"
version = "0.0.2"
url = "https://eddington_gui.com/eddington_gui"
license = "Apache Software License"
author = 'Sagi Shadur'
author_email = "saroad2@gmail.com"

[tool.briefcase.app.eddington_gui]
formal_name = "EddingtonGUI"
description = "A gui library wrapping Eddington"
icon = "src/eddington_gui/resources/eddington_gui"
sources = ['src/eddington_gui']
requires = [
    '--pre',
    'toga-chart>=0.1.0',
    'xlrd>=1.2.0',
    'eddington>=0.0.11',
    'eddington-matplotlib>=0.0.9'
]


[tool.briefcase.app.eddington_gui.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.eddington_gui.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.eddington_gui.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.eddington_gui.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.eddington_gui.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
