[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "EddingtonGUI"
bundle = "com.eddington-gui"
version = "0.0.8"
url = "https://github.com/EddLabs/eddington-gui"
license = "Apache Software License"
author = 'Sagi Shadur'
author_email = "saroad2@gmail.com"

[tool.briefcase.app.eddington_gui]
formal_name = "EddingtonGUI"
description = "A gui library wrapping Eddington"
icon = "src/eddington_gui/resources/eddington_gui"
sources = ['src/eddington_gui']
requires = [
    'toga-chart>=0.1.0',
    'openpyxl>=3.0.5',
    'eddington==0.0.23',
    'lastversion>=1.2.4',
    'packaging>=20.8',
]


[tool.briefcase.app.eddington_gui.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev26',
]

[tool.briefcase.app.eddington_gui.linux]
requires = [
    'toga-gtk>=0.3.0.dev26',
]

[tool.briefcase.app.eddington_gui.windows]
requires = [
    'toga-winforms>=0.3.0.dev26',
]
system_installer = true

# Mobile deployments
[tool.briefcase.app.eddington_gui.iOS]
requires = [
    'toga-iOS>=0.3.0.dev26',
]

[tool.briefcase.app.eddington_gui.android]
requires = [
    'toga-android>=0.3.0.dev26',
]
